Bug 1558393 - Don't keep top level scope owner when going backwards. r=smaug, a=jcristau

When going backwards the host is the last thing of the scope we see, not the
first, so we need to make sure to properly switch to the document scope.

To be clear, the order this is happening when bogusly going backwards from
`second` to `first` is:

 * We're doing frame traversal so start off the <div>.
 * The text is the first frame in preorder we find, we figure out that the
   current top-level owner is the host. But it's not focusable so we carry on.
 * Now we go to the next frame and find the <span>. `oldTopLevelScopeOwner` is
   still the span itself, and we don't change it (that's what my patch fixes),
   so we go into the "We're within non-document scope, continue", and thus skip
   trying to focus the host.

With this fix we actually realize that the current top level scope owner has
changed and thus don't skip it and try to focus the slot properly.

Differential Revision: https://phabricator.services.mozilla.com/D35585